# app/swagger/ak-api.yaml
@@ -84,6 +84,14 @@ components:
           type: string
           description: Detail about the error
 
+    # POST query request
+    query_object:
+      description: Query filter and associated parameters for POST end points
+      type: object
+      properties:
+        filters:
+          type: object
+
 paths:
   /:
     get:
@@ -129,3 +137,26 @@ paths:
               schema:
                 $ref: '#/components/schemas/error_response'
 
+  /query:
+    post:
+      description: Query submission
+      operationId: perform_query
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/query_object'
+      responses:
+        '200':
+          description: Success.
+          content:
+            application/json:
+              schema:
+                type: object
+        '500':
+          description: Server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error_response'
+  
